--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -10,4 +10,8 @@
       <PackageReference Include="Ulid" Version="1.4.1" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
 </Project>
